Corrección Cliente Equipo

--- a/src/trunk/GRAPHO_SYSTEMS/src/views/clientes/Clientes.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/clientes/Clientes.mxml
@@ -101,7 +101,7 @@
 				return {webApplication: _webApplication,
 					workManager: this,
 					selectedItem: _dataList.selectedItem,
-					dataObject: _dataList.selectedItem
+					Cliente: _dataList.selectedItem
 				}					
 			}
 			
